--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,5 @@
 build_from:
-  amd64: "ghcr.io/wez/pview:latest"
+  amd64: "ghcr.io/home-assistant/amd64-base:3.18"
 labels:
   org.opencontainers.image.title: "Home Assistant Add-on: PowerView MQTT Bridge"
   org.opencontainers.image.description: "Acts as a bridge between a Hunter Douglas PowerView Hub and Home Assistant, via the Home Assistant MQTT Integration."
