--- a/config.yaml
+++ b/config.yaml
@@ -1,23 +1,26 @@
 name: PowerView to MQTT Bridge
-version: "0.1.0"
+version: "latest"
 slug: pview
 description: >
   Acts as a bridge between a Hunter Douglas PowerView Hub and Home Assistant, via the Home Assistant MQTT Integration.
 url: https://github.com/wez/pview
 arch:
   - amd64
-image: "ghcr.io/wez/pview:latest"
+image: "ghcr.io/wez/pview-{arch}"
 init: false
 startup: services
 services:
- - mqtt:need
-map:
- - config:rw
+  - mqtt:need
+#map:
+#  - config:rw
 options:
   mqtthost: "mqtt.localdomain"
   mqttport: 1883
+  discoveryprefix: homeassistant
 schema:
-  mqtthost: "str?" 
+  mqtthost: "str?"
   mqttport: "int?"
   mqttuser: "str?"
   mqttpass: "str?"
+  bindaddress: "str?"
+  discoveryprefix: "str?"
